# fanpage-control-pipeline

./: .env.bak.autopub  .env.example  .gitignore  .npmrc  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  diarization_tasks.py  discovery_tasks.py  docker-compose.gpu.yml  docker-compose.yml  docker-compose.yml.bak  facebook_tasks.py  image_posts_tasks.py  mota.md  package.json  pipeline_tasks.py  pnpm-lock.yaml  pnpm-workspace.yaml  ranking.py  reels_tasks.py  runner.py  test_filters.py  test_runner.py  whisperx_tasks.py  yolo_tasks.py
.claude/: settings.local.json
ai/: __init__.py  json_repair.py  prompts.py  qwen_client.py
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  celery_client.py  config.py  deps.py  errors.py  logging_setup.py  main.py  sse.py
apps/api/app/routers/: __init__.py  assets.py  content_sources.py  dashboard.py  discover.py  facebook.py  health.py  image_posts.py  jobs.py  reel_drafts.py  scripts.py
apps/api/app/services/: __init__.py  event_bus.py  job_service.py
apps/api/tests/: conftest.py  test_content_sources_delete.py  test_health.py  test_jobs_create.py  test_jobs_list.py  test_sse.py
apps/frontend/: .dockerignore  .env.local  (+11 more)
apps/workers/: Dockerfile  Dockerfile.gpu  README.md  __init__.py  _app.py  _app.py.bak.noimage  _app.py.bak.preprime  celery_app.py  db_ctx.py  event_publisher.py  pyproject.toml  worker_app.py
apps/workers/tasks/: __init__.py  _helpers.py  download.py  facebook_tasks.py.bak.preprime  qwen_tasks.py  render_tasks.py
apps/workers/tests/: conftest.py  test_download_task.py  test_qwen_pipeline.py  test_render_cleanup.py  test_render_task.py
docs/: api-contracts.md  competitor_analysis.md  llm-prompts.md  pipeline.md
ffmpeg/: __init__.py  audio.py  crop.py  cut.py  effects.py  overlays.py  pipeline.py  probe.py  progress.py
scripts/: bootstrap.sh  generate_fanpage_assets.py  generate_skinnydad_assets.py  restart_worker_local_llm.sh  seed.py  seed_scripts.py  setup_local_llm.sh  tts_smoke.py
services/: search_fitness.py  search_survival.py  test_discovery.py
tests/: test_audio_mix.py  test_audio_passthrough.py  test_audio_replace.py  test_recap.py
(+92 files in other folders)
