[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workers"
version = "0.1.0"
description = "Celery workers for the shortform-factory pipeline."
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3",
    "redis>=5.0",
    "loguru>=0.7",
    "pydantic>=2.6",
    "httpx>=0.27",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29",
    "anyio>=4.3",
    "shared-py",
    "database",
    "task-queue",
    "storage",
    "ai",
    "ffmpeg",
]

[project.optional-dependencies]
download = ["yt-dlp>=2024.3.10"]
asr = ["whisperx"]
diar = ["pyannote.audio"]
vision = ["ultralytics", "opencv-python-headless"]
test = ["pytest>=8", "pytest-asyncio>=0.23", "fakeredis>=2.20", "aiosqlite>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps_workers*", "tasks*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
